derive/test/compile_fail/record_as_seq_incomplete_indexes.stderr
error: proc-macro derive panicked
 --> compile_fail/record_as_seq_incomplete_indexes.rs:3:10
  |
3 | #[derive(Value)]
  |          ^^^^^
  |
  = help: message: unsupported attribute `index` on struct field
